--- a/pages/home/home.wxss
+++ b/pages/home/home.wxss
@@ -3,3 +3,48 @@
   color: red;
   font-size: 30px;
 }
+
+.box {
+  width: 300px;
+  height: 300px;
+  background-color: orange;
+}
+
+.outer {
+  width: 300px;
+  height: 300px;
+  background-color: orange;
+}
+
+.inner {
+  width: 200px;
+  height: 200px;
+  background-color: blueviolet;
+}
+
+.container {
+  display: flex;
+}
+
+.item {
+  flex: 1;
+  text-align: center;
+}
+
+.view1 {
+  width: 300px;
+  height: 300px;
+  background-color: orange;
+}
+
+.view2 {
+  width: 200px;
+  height: 200px;
+  background-color: blueviolet;
+}
+
+.view3 {
+  width: 100px;
+  height: 100px;
+  background-color: greenyellow;
+}
